# hhd-bazzite

./: README.md  pyproject.toml
src/hhd_bazzite/: general.yml  hhd.py  ujust.yml
