[project]
name = "hhd_bazzite"
version = "0.0.1"
authors = [
  { name="Kapenekakis Antheas", email="pypi@antheas.dev" },
]
description = "Handheld Daemon Plugin for Bazzite."
readme = "readme.md"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
  "rich>=13.5.2",
]

[project.urls]
"Homepage" = "https://github.com/hhd-dev/hhd_bazzite"
"Bug Tracker" = "https://github.com/hhd-dev/hhd_bazzite/issues"

[project.entry-points."hhd.plugins"]
bazzite = "hhd_bazzite.hhd:autodetect"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["hhd_bazzite*"]  # package names should match these glob patterns (["*"] by default)
